Nangband ChangeLog - If it's not broken, let's fix it until it is.
==================

2002-07-22
----------
- New option: "pseudo_light". Pseudo-ID type is no longer based on class.
  Instead, if this option is off, your character will have 'heavy'
  pseudo-ID and will therefore sense {average}, {special}, etc.... If
  on, you will only sense lightly, but will have a score advantage.
  (takkaria; idea taken from Gumband)
- Changed the total_score() code so it now gives much more "specific"
  scores; inventory+equipment cost is counted, and options give score modifiers.
  (takkaria)

2002-07-18
----------
- Divorced the new CAVE_TDETECT flag from cave_info[][]; it is now in 
  cave_info2[][].  This is for efficiency.  The savefile code doesn't handle
  old dungeons; it now prompts for dungeon regeneration.  (takkaria)
- Added basic terrain flags; I still need to add some to lib/edit/terrain.txt.
  (takkaria)

2002-07-09
----------
- Fixed two bugs; enchant_spell() was called incorrectly from the Lua scripts,
  and the logic for bounds checking in cmd1.c was reversed. (takkaria)

2002-07-01
----------
- Renamed the disturb_panel option to disturb_detect. It disturbs the player
  when s/he is about to leave trap detected area. (pelpel)
- Added the trap detection status indicator. (pelpel)
- Slightly shortened the speed field and moved the depth field to fit the trap
  detection field in. All the available columns are used now. Please note that
  the last column on the last line cannot be used safely on character display
  terminals. (pelpel)

2002-06-30
----------
- Fixed a bug that allowed astral players to use word of recall to
  reach the surface. (parody)

2002-06-29
----------
- Fiddled around with the cygwin and "standard" makefiles - they are
  (should be) much smaller in file size. (takkaria)
- Fixed a compiler warning in util.c. (takkaria)
- Made cave_info a u16b array (from a byte array) for pelpel to do